--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,30 +60,33 @@ jobs:
           terraform init -input=false
           terraform plan
 
-  # terraform_apply:
-  #   runs-on: ubuntu-latest
-  #   name: Terraform Apply
-  #   needs: terraform_plan  # This job will only run after terraform_plan succeeds
-  #   if: github.event_name == 'workflow_dispatch'  # Ensure it's manually triggered
+  terraform_apply:
+    runs-on: ubuntu-latest
+    name: Terraform Apply
+    needs: terraform_plan  # This job will only run after terraform_plan succeeds
+    if: github.event_name == 'workflow_dispatch'  # Ensure it's manually triggered
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Set up Terraform
-  #       uses: hashicorp/setup-terraform@v2
-  #       with:
-  #         terraform_version: '1.3.0'
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: '1.3.0'
 
-  #     - name: Set up AWS Credentials
-  #       uses: aws-actions/configure-aws-credentials@v2
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: us-east-1
+      - name: Set up AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-  #     - name: Terraform Apply
-  #       run: terraform apply -auto-approve
+      - name: Terraform Apply
+        run: |
+            cd terraform
+            terraform init -input=fales 
+            terraform apply -auto-approve
 
   # ssh_check:
   #   runs-on: ubuntu-latest
