--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - refactor/terraform+scripts
+      - "refactor/terraform+scripts"
 
 jobs:
   train:
