--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -41,11 +41,11 @@ jobs:
           terraform init
           popd
 
-      - name: 🚀 Terraform Apply
-        run: |
-         pushd ./terraform
-         terraform apply -auto-approve -var="mlflow_tracking_uri=${{ vars.MLFLOW_TRACKING_URI }}" -var="epochs=${{ vars.EPOCHS }}"
-         popd
+      # - name: 🚀 Terraform Apply
+      #   run: |
+      #    pushd ./terraform
+      #    terraform apply -auto-approve -var="mlflow_tracking_uri=${{ vars.MLFLOW_TRACKING_URI }}" -var="epochs=${{ vars.EPOCHS }}"
+      #    popd
 
       - name: 🧨 Terraform Destroy
         if: always()
