--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: 📁 Configure SSH Key Pair
         run: |
+          mkdir ~/.ssh
           echo "${{ secrets.TRAIN_SERVER_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           echo "${{ secrets.TRAIN_SERVER_SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
