--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -94,7 +94,9 @@ jobs:
       - name: Connect to VM and run training script
         run: |
           ssh-keyscan ${{ needs.provision.outputs.vm_ip }} >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ needs.provision.outputs.vm_ip }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -tt ubuntu@${{ needs.provision.outputs.vm_ip }} << 'EOF'
+            set -x  # prints each command
+            set -e
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             sudo apt update && sudo apt install -y git python3-pip
