Fix issue with script

--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -91,26 +91,30 @@ jobs:
       - name: Set permissions
         run: chmod 600 ~/.ssh/id_rsa
 
-      - name: Connect to VM and run training script
+      - name: SSH and run training
         run: |
           ssh-keyscan ${{ needs.provision.outputs.vm_ip }} >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=no -tt ubuntu@${{ needs.provision.outputs.vm_ip }} << 'EOF'
-            set -x  # prints each command
-            set -e
+          ssh -o StrictHostKeyChecking=no -tt ubuntu@${{ needs.provision.outputs.vm_ip }} << EOF
+            set -ex
+
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
+
             sudo apt update && sudo apt install -y git python3-pip
+
             git clone --branch refactor/terraform-scripts git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
+
             python3 -m venv .venv
             source .venv/bin/activate
+
             pip install -r requirements.txt
             dvc pull
-            export MLFLOW_TRACKING_URI='${{ vars.MLFLOW_TRACKING_URI }}'
-            export EPOCHS='${{ vars.EPOCHS }}'
-            export ACCURACY_THRESHOLD='${{ vars.ACCURACY_THRESHOLD }}'
+
+            export MLFLOW_TRACKING_URI="${{ vars.MLFLOW_TRACKING_URI }}"
+            export EPOCHS="${{ vars.EPOCHS }}"
+            export ACCURACY_THRESHOLD="${{ vars.ACCURACY_THRESHOLD }}"
+
             dvc repro
             dvc push
           EOF
-
-      
