--- a/.github/workflows/01-train.yml
+++ b/.github/workflows/01-train.yml
@@ -100,7 +100,8 @@ jobs:
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-            sudo apt update && sudo apt install -y git python3-pip
+            sudo apt update
+            sudo apt install -y git python3-pip
 
             git clone --branch refactor/terraform-scripts git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
