--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = origin
+    remote = myremote
 ['remote "origin"']
     url = s3://dvc-datastore-dev-04062025
+['remote "myremote"']
+    url = s3://mlops-asl-poc-11062025/dvcstore
