--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,8 +84,9 @@ jobs:
           terraform apply -auto-approve
 
       - name: Get EC2 Public IP
-        id: get_ip
-        run: echo "EC2_PUBLIC_IP=$(cd terraform && terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
+        run: |
+          cd terraform
+          echo "EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
 
   remote_train:
     runs-on: ubuntu-latest
