--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,8 +85,7 @@ jobs:
 
       - name: Get EC2 Public IP
         run: |
-          cd terraform
-          echo "EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
+           echo "EC2_PUBLIC_IP=$(cd terraform && terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
 
   remote_train:
     runs-on: ubuntu-latest
