--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,8 +59,6 @@ jobs:
   terraform_apply:
     runs-on: ubuntu-latest
     needs: terraform_plan
-    outputs:
-      ec2_ip: ${{ steps.get_ip.outputs.EC2_PUBLIC_IP }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -84,8 +82,14 @@ jobs:
           terraform apply -auto-approve
 
       - name: Get EC2 Public IP
+        id: get_ip
         run: |
-           echo "EC2_PUBLIC_IP=$(cd terraform && terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
+          cd terraform
+          terraform output -raw ec2_public_ip > ec2_ip.txt
+          EC2_IP=$(cat ec2_ip.txt)
+          echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
+          echo "::set-output name=EC2_PUBLIC_IP::$EC2_IP"
+
 
   remote_train:
     runs-on: ubuntu-latest
@@ -97,7 +101,7 @@ jobs:
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ env.EC2_PUBLIC_IP }}
+          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
