--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,7 +87,7 @@ jobs:
           cd terraform
           terraform output -raw ec2_public_ip > ec2_ip.txt
           EC2_IP=$(cat ec2_ip.txt)
-          echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
+          echo "EC2_PUBLIC_IP=..." >> $GITHUB_ENV
           echo "::set-output name=EC2_PUBLIC_IP::$EC2_IP"
 
 
