--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,11 +85,8 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          terraform output -raw ec2_public_ip > ec2_ip.txt
-          EC2_IP=$(cat ec2_ip.txt)
-          echo "EC2_PUBLIC_IP=..." >> $GITHUB_ENV
-          echo "::set-output name=EC2_PUBLIC_IP::$EC2_IP"
-
+          EC2_IP=$(terraform output -raw ec2_public_ip)
+          echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
@@ -101,7 +98,7 @@ jobs:
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ needs.terraform_apply.outputs.EC2_PUBLIC_IP }}
+          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
