--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           cd terraform
           EC2_IP=$(terraform output -raw ec2_public_ip)
-          echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
+          echo "ec2_ip=..." >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
