--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -81,12 +81,14 @@ jobs:
           terraform init -input=false
           terraform apply -auto-approve
 
-      - name: Get EC2 Public IP
-        id: get_ip
-        run: |
-          cd terraform
-          EC2_IP=$(terraform output -raw ec2_public_ip)
-          echo "ec2_ip=..." >> "$GITHUB_OUTPUT"
+      - - name: Get EC2 Public IP
+  id: get_ip
+  run: |
+    cd terraform
+    terraform output -raw ec2_public_ip > ip.txt
+    EC2_IP=$(cat ip.txt | tr -d '\r')  # strip any newlines or carriage return
+    echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
+
 
   remote_train:
     runs-on: ubuntu-latest
