--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           cd terraform
           terraform output -raw ec2_public_ip > ip.txt
-          EC2_IP=$(cat ip.txt | tr -d '\r')  # strip any newlines or carriage return
+          EC2_IP=$(head -n 1 ip.txt | tr -d '\r\n') # strip any newlines or carriage return
           echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
 
 
