--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,42 +57,47 @@ jobs:
           terraform plan
 
   terraform_apply:
-    runs-on: ubuntu-latest
-    needs: terraform_plan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  runs-on: ubuntu-latest
+  needs: terraform_plan
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: '1.3.0'
+  outputs:
+    ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}  
 
-      - name: Set up AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Terraform Apply
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform apply -auto-approve
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: '1.3.0'
 
-      - name: Get EC2 Public IP
-        id: get_ip
-        run: |
-          cd terraform
-          terraform output -raw ec2_public_ip > ip.txt
-          EC2_IP=$(head -n 1 ip.txt | tr -d '\r\n') # strip any newlines or carriage return
-          echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
+    - name: Set up AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Terraform Apply
+      run: |
+        cd terraform
+        terraform init -input=false
+        terraform apply -auto-approve
+
+    - name: Get EC2 Public IP
+      id: get_ip
+      run: |
+        cd terraform
+        EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
+        echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
+
 
 
   remote_train:
     runs-on: ubuntu-latest
     needs: terraform_apply
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -100,7 +105,7 @@ jobs:
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ needs.terraform_apply.outputs.EC2_IP }}
+          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
