--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -105,13 +105,13 @@ jobs:
         with:
           host: ${{ needs.terraform_apply.outputs.ec2_ip }}
           username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
             sudo apt update -y
             sudo apt install -y python3 python3-pip git
             mkdir -p ~/.ssh
             chmod 700 ~/.ssh
-            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
             git clone git@github.com:Shoaib720/asl-mlops.git
