--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           terraform_version: '1.3.0'
 
-      - name: Configure AWS credentials
+      - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -43,7 +43,7 @@ jobs:
         with:
           terraform_version: '1.3.0'
 
-      - name: Configure AWS credentials
+      - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -72,7 +72,7 @@ jobs:
         with:
           terraform_version: '1.3.0'
 
-      - name: Configure AWS credentials
+      - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -107,20 +107,28 @@ jobs:
           username: ubuntu
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
+            echo "Connected to EC2!"
+
             sudo apt update -y
             sudo apt install -y python3 python3-pip git
+
             mkdir -p ~/.ssh
             chmod 700 ~/.ssh
             echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
+
             git clone git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
             git checkout feature/bts-13-terraform
+
             pip3 install virtualenv
-            virtualenv .venv && source .venv/bin/activate
+            virtualenv .venv
+            source .venv/bin/activate
+
             pip install -r requirements.txt
             pip install dvc[s3]
+
             dvc pull
             dvc repro
             dvc push
