--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,10 +59,8 @@ jobs:
   terraform_apply:
     runs-on: ubuntu-latest
     needs: terraform_plan
-
     outputs:
       ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -89,16 +87,17 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
-          echo "ec2_ip=$EC2_IP" >> "$GITHUB_OUTPUT"
+          echo "ec2_ip=$(terraform output -raw ec2_public_ip | tr -d '\r\n')" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
     needs: terraform_apply
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Debug IP Address
+        run: echo "Connecting to EC2 at IP: ${{ needs.terraform_apply.outputs.ec2_ip }}"
 
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
