--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,7 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform_plan
     outputs:
-      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
+      ec2_ip: ${{ steps.export_ip.outputs.ec2_ip }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -83,11 +83,15 @@ jobs:
           terraform init -input=false
           terraform apply -auto-approve
 
-      - name: Get EC2 Public IP
-        id: get_ip
+      - name: Fetch EC2 IP
         run: |
           cd terraform
-          echo "ec2_ip=$(terraform output -raw ec2_public_ip | tr -d '\r\n')" >> "$GITHUB_OUTPUT"
+          terraform output -raw ec2_public_ip | tr -d '\r\n' > ec2_ip.txt
+
+      - name: Export EC2 IP as Output
+        id: export_ip
+        run: |
+          echo "ec2_ip=$(cat terraform/ec2_ip.txt)" >> $GITHUB_OUTPUT
 
   remote_train:
     runs-on: ubuntu-latest
