--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,7 +60,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform_plan
     outputs:
-      ec2_ip: ${{ steps.export_ip.outputs.ec2_ip }}
+      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -83,15 +84,13 @@ jobs:
           terraform init -input=false
           terraform apply -auto-approve
 
-      - name: Fetch EC2 IP
+      - name: Get EC2 Public IP
+        id: get_ip
         run: |
-          cd terraform
-          terraform output -raw ec2_public_ip | tr -d '\r\n' > ec2_ip.txt
-
-      - name: Export EC2 IP as Output
-        id: export_ip
-        run: |
-          echo "ec2_ip=$(cat terraform/ec2_ip.txt)" >> $GITHUB_OUTPUT
+          echo "Getting output..."
+          ip=$(terraform output -raw ec2_public_ip)
+          echo "EC2 Public IP is: $ip"
+          echo "ec2_ip=$ip" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
@@ -105,12 +104,18 @@ jobs:
             echo "Connecting to EC2 at IP: ${{ needs.terraform_apply.outputs.ec2_ip }}"
 
       - name: SSH into EC2 and Run Training Script
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
-          username: ubuntu
-          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          script: |
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@${{ needs.terraform_apply.outputs.ec2_ip }} <<EOF
+            echo "Connected to EC2"
+        #uses: appleboy/ssh-action@v1.0.0
+        #with:
+        #  host: ${{ needs.terraform_apply.outputs.ec2_ip }}
+        username: ubuntu
+        key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+        script: |
             echo "✅ Connected to EC2"
 
             sudo apt update -y
