--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -113,8 +113,8 @@ jobs:
         #uses: appleboy/ssh-action@v1.0.0
         #with:
         #  host: ${{ needs.terraform_apply.outputs.ec2_ip }}
-        username: ubuntu
-        key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+        # username: ubuntu
+        # key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
         script: |
             echo "✅ Connected to EC2"
 
