--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,8 +59,8 @@ jobs:
   terraform_apply:
     runs-on: ubuntu-latest
     needs: terraform_plan
-   
-
+    outputs:
+      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -82,17 +82,12 @@ jobs:
           cd terraform
           terraform init -input=false
           terraform apply -auto-approve
-        
-        outputs:
-        ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
 
       - name: Get EC2 Public IP
         id: get_ip
         run: |
-          echo "Getting output..."
-          ip=$(terraform output -raw ec2_public_ip)
-          echo "EC2 Public IP is: $ip"
-          echo "ec2_ip=$ip" >> "$GITHUB_OUTPUT"
+          cd terraform
+          echo "ec2_ip=$(terraform output -raw ec2_public_ip | tr -d '\r\n')" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
@@ -102,19 +97,37 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug IP Address
-        run: |
-            echo "Connecting to EC2 at IP: ${{ needs.terraform_apply.outputs.ec2_ip }}"
+        run: echo "Connecting to EC2 at IP: ${{ needs.terraform_apply.outputs.ec2_ip }}"
 
       - name: SSH into EC2 and Run Training Script
-        run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
-          chmod 600 private_key.pem
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
+          username: ubuntu
+          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+          script: |
+            echo "✅ Connected to EC2"
 
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@${{ needs.terraform_apply.outputs.ec2_ip }} <<EOF
-            echo "Connected to EC2"
-        #uses: appleboy/ssh-action@v1.0.0
-        #with:
-        #  host: ${{ needs.terraform_apply.outputs.ec2_ip }}
-        # username: ubuntu
-        # key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-        
+            sudo apt update -y
+            sudo apt install -y python3 python3-pip git
+
+            mkdir -p ~/.ssh
+            chmod 700 ~/.ssh
+            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+            git clone git@github.com:Shoaib720/asl-mlops.git
+            cd asl-mlops
+            git checkout feature/bts-13-terraform
+
+            pip3 install virtualenv
+            virtualenv .venv
+            source .venv/bin/activate
+
+            pip install -r requirements.txt
+            pip install dvc[s3]
+
+            dvc pull
+            dvc repro
+            dvc push
