--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,6 +87,7 @@ jobs:
         id: get_ip
         run: |
           cd terraform
+          echo $(terraform output -raw ec2_public_ip | tr -d '\r\n')
           echo "ec2_ip=$(terraform output -raw ec2_public_ip | tr -d '\r\n')" >> "$GITHUB_OUTPUT"
 
   remote_train:
