--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,7 +58,7 @@ jobs:
 
   terraform_apply:
     runs-on: ubuntu-latest
-    needs: terraform_plan
+    # needs: terraform_plan
     outputs:
       ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
     steps:
