--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,8 +7,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  terraform_validate:
+  terraform_deployment:
     runs-on: ubuntu-latest
+    outputs:
+      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,52 +32,12 @@ jobs:
           cd terraform
           terraform init -input=false
           terraform validate
-
-  terraform_plan:
-    runs-on: ubuntu-latest
-    needs: terraform_validate
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: '1.3.0'
-
-      - name: Set up AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
+      
       - name: Terraform Plan
         run: |
           cd terraform
           terraform init -input=false
           terraform plan
-
-  terraform_apply:
-    runs-on: ubuntu-latest
-    needs: terraform_plan
-    outputs:
-      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: '1.3.0'
-
-      - name: Set up AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
 
       - name: Terraform Apply
         run: |
@@ -102,20 +64,9 @@ jobs:
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
             echo "✅ Connected to EC2"
-            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}
 
             sudo apt update -y
             sudo apt install -y python3 python3-pip git
-            
-            mkdir -p ~/.ssh
-            chmod 700 ~/.ssh
-            cat << 'EOF' > ~/.ssh/id_rsa
-            ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-            EOF
-            
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-keyscan ${{ needs.terraform_apply.outputs.ec2_ip }} >> ~/.ssh/known_hosts
 
             git clone git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
