--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,6 +68,10 @@ jobs:
             sudo apt update -y
             sudo apt install -y python3 python3-pip git
 
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+            ssh-keyscan ${{ needs.terraform_apply.outputs.ec2_ip }} >> ~/.ssh/known_hosts
+
             git clone git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
             git checkout feature/bts-13-terraform
