--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,7 @@ jobs:
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ needs.terraform_apply.outputs.ec2_ip }}
+          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
           username: ubuntu
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
@@ -70,7 +70,7 @@ jobs:
 
             chmod 600 ~/.ssh/id_rsa
             ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-keyscan ${{ needs.terraform_apply.outputs.ec2_ip }} >> ~/.ssh/known_hosts
+            ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
 
             git clone git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
