--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -56,6 +56,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform_deployment
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -65,24 +68,4 @@ jobs:
           script: |
             echo "✅ Connected to EC2"
 
-            sudo apt update -y
-            sudo apt install -y python3 python3-pip git
-
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
-
-            git clone git@github.com:Shoaib720/asl-mlops.git
-            cd asl-mlops
-            git checkout feature/bts-13-terraform
-
-            pip3 install virtualenv
-            virtualenv .venv
-            source .venv/bin/activate
-
-            pip install -r requirements.txt
-            pip install dvc[s3]
-
-            dvc pull
-            dvc repro
-            dvc push
+            sudo apt update -y && sudo apt upgrade -y
