--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,7 +43,7 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          IP=$(terraform output -raw ec2_public_ip)"
+          IP=$(terraform output -raw ec2_public_ip | tr -d '\n' | tr -d '\r')"
           echo "Public IP: $IP"
           echo "ec2_ip=$IP >> "$GITHUB_OUTPUT"
 
