--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,9 +44,10 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          ip=$(terraform output -raw ec2_public_ip)
-          echo "Public IP: $ip"
-          echo "ec2_ip=$ip" >> "$GITHUB_OUTPUT"
+          ip=$(terraform output -raw ec2_public_ip | tr -d '\r')
+          echo "Extracted IP: $ip"
+          echo "ec2_ip=$ip" >> $GITHUB_OUTPUT
+       
     
   # remote_train:
   #   runs-on: ubuntu-latest
